--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".AssignmentActivity" />
-        <activity android:name=".CreateActivity" />
+        <activity android:name=".AssignmentCreateActivity" />
         <activity android:name=".WeatherActivity" />
         <activity android:name=".HealthActivity" />
+        <activity android:name=".HealthCreateActivity" />
     </application>
 
 </manifest>
